--- a/AWSCloudComputing/appsettings.json
+++ b/AWSCloudComputing/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=database-1.ciuk7vfaagye.us-east-2.rds.amazonaws.com;User Id=admin;Password=123456789;Database=AWSCloudComputing;"
+    "Default": "Server=;User Id=;Password=;Database=AWSCloudComputing;"
   },
   "Logging": {
     "LogLevel": {
@@ -15,8 +15,8 @@
       "SenderAddress": "hgutieco@gmail.com",
       "FrontEndUrl": "",
       "ForgotPasswordRoute": "/#/user/forgot-password/",
-      "AccessKeyId": "AKIAY6NANMC45REM3UGR",
-      "AccessSecretKey": "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"
+      "AccessKeyId": "",
+      "AccessSecretKey": ""
     },
     "S3": {
       "AccessKeyId": "",
