End point Upload File

--- a/AWSCloudComputing/appsettings.json
+++ b/AWSCloudComputing/appsettings.json
@@ -15,13 +15,13 @@
       "SenderAddress": "hgutieco@gmail.com",
       "FrontEndUrl": "",
       "ForgotPasswordRoute": "/#/user/forgot-password/",
-      "AccessKeyId": "",
-      "AccessSecretKey": ""
+      "AccessKeyId": "AKIAY6NANMC4WO5EXJZH",
+      "AccessSecretKey": "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"
     },
     "S3": {
-      "AccessKeyId": "",
-      "AccessSecretKey": "",
-      "Bucket": "",
+      "AccessKeyId": "AKIAY6NANMC4WO5EXJZH",
+      "AccessSecretKey": "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",
+      "Bucket": "cloud-computing-bucket-dev",
       "EndpointAmazon": "https://{0}.s3.us-east-2.amazonaws.com/"
     },
     "SNS": {
